--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail2.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail2.xml
@@ -47,6 +47,7 @@
         <com.fanc.wheretoplay.view.DrawableCenterLeftTextView
             android:id="@+id/tv_pay"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/text_red"
