--- a/WhereToPlay/app/src/main/res/layout/activity_down_payment.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_down_payment.xml
@@ -182,35 +182,13 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ll_down_payment_balance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_down_payment_ali"
-            android:onClick="onViewClick"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="@dimen/width_50"
-                android:layout_height="@dimen/height_50"
-                android:padding="@dimen/padding_14"
-                android:src="@drawable/pay_by_balance" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/pay_by_balance"
-                android:textColor="@color/text_black_sec"
-                android:textSize="@dimen/normal_textsize" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_upp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_down_payment_balance"
+            android:layout_below="@+id/ll_down_payment_ali"
             android:background="@color/white"
             android:onClick="onViewClick"
 
@@ -228,6 +206,30 @@
                 android:layout_gravity="center_vertical"
                 android:text="银联支付"
                 android:textColor="@color/text_black"
+                android:textSize="@dimen/normal_textsize" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_down_payment_balance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_upp"
+            android:onClick="onViewClick"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/width_50"
+                android:layout_height="@dimen/height_50"
+                android:padding="@dimen/padding_14"
+                android:src="@drawable/pay_by_balance" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/pay_by_balance"
+                android:textColor="@color/text_black_sec"
                 android:textSize="@dimen/normal_textsize" />
 
         </LinearLayout>
@@ -255,12 +257,7 @@
                 android:layout_weight="1"
                 android:button="@drawable/selector_pay_way" />
 
-            <RadioButton
-                android:id="@+id/rb_down_payment_balance"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_0"
-                android:layout_weight="1"
-                android:button="@drawable/selector_pay_way" />
+
 
             <RadioButton
                 android:id="@+id/rb_upp"
@@ -269,6 +266,14 @@
 
                 android:layout_weight="1"
                 android:button="@drawable/selector_pay_way" />
+
+            <RadioButton
+                android:id="@+id/rb_down_payment_balance"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_0"
+                android:layout_weight="1"
+                android:button="@drawable/selector_pay_way" />
+
         </RadioGroup>
 
         <View
