--- a/WhereToPlay/app/src/main/res/layout/activity_order_pay.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_order_pay.xml
@@ -478,7 +478,7 @@
             </LinearLayout>
         </ScrollView>
 
-        <com.zhy.android.percent.support.PercentLinearLayout
+        <com.google.android.flexbox.FlexboxLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50"
@@ -491,7 +491,7 @@
                 android:gravity="center_vertical"
                 android:paddingLeft="12dp"
                 android:orientation="horizontal"
-                app:layout_widthPercent="66%w">
+                app:layout_flexGrow="3">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -521,15 +521,15 @@
 
             <Button
                 android:id="@+id/btn_pay_bill"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="#C4483C"
                 android:onClick="onViewClick"
                 android:text="确认支付"
                 android:textColor="@color/white"
                 android:textSize="@dimen/textsize_level3"
-                app:layout_widthPercent="34%w"/>
-        </com.zhy.android.percent.support.PercentLinearLayout>
+                app:layout_flexGrow="1"/>
+        </com.google.android.flexbox.FlexboxLayout>
     </LinearLayout>
 
 </RelativeLayout>
