--- a/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_collection.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -11,15 +11,41 @@
             android:id="@+id/tm_collection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
 
             <android.support.v7.widget.RecyclerView
+                android:layout_below="@+id/tm_collection"
                 android:id="@+id/rv_collection"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"/>
-        </ScrollView>
-    </LinearLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/rrrrrr"
+                android:layout_below="@+id/tm_collection"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+              android:visibility="gone"
+
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/nodate" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/iv"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="暂无相关数据" />
+            </RelativeLayout>
+
+
+    </RelativeLayout>
 </layout>
