--- a/WhereToPlay/app/src/main/res/layout/item_check_comments_cardview.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_check_comments_cardview.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/cl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:orientation="vertical"
-        >
-       <ImageView
-           android:id="@+id/iv_cardview"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:scaleType="fitXY"
-           android:layout_gravity="center"
-           />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/iv_cardview"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:scaleType="fitXY" />
 
     </LinearLayout>
 
