--- a/WhereToPlay/app/src/main/res/values/styles.xml
+++ b/WhereToPlay/app/src/main/res/values/styles.xml
@@ -75,6 +75,14 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
+
+    <style name="Transparent" parent="android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="star" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/drawable_star_small</item>
         <item name="android:maxHeight">16dp</item>
