--- a/WhereToPlay/app/src/main/res/layout/main2fragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/main2fragment.xml
@@ -9,9 +9,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <com.jcodecraeer.xrecyclerview.XRecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/tbv" />
+    <RelativeLayout
+        android:layout_below="@+id/tbv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.jcodecraeer.xrecyclerview.XRecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+             />
+
+        <RelativeLayout
+            android:id="@+id/rrrrrr"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:layout_centerInParent="true"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+
+                android:src="@drawable/nodate" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/iv"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:text="暂无相关数据" />
+        </RelativeLayout>
+
+    </RelativeLayout>
+
 </RelativeLayout>
