--- a/WhereToPlay/app/src/main/res/layout/fragment_deal_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_deal_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <RadioGroup
+            android:layout_below="@+id/tm_deal_detail"
             android:id="@+id/rg_deal_detail"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_50"
@@ -83,22 +84,16 @@
                 android:layout_weight="0.5" />
         </RadioGroup>
 
-        <com.fanc.wheretoplay.view.MyViewPager
+        <android.support.v4.view.ViewPager
+            android:layout_below="@+id/rg_deal_detail"
             android:id="@+id/mvp_deal_detail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:paddingBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rg_deal_detail" />
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/line_height"
-            android:layout_marginBottom="@dimen/margin_minus_1"
-            android:background="@color/pay_reserve_list_divider_white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rg_deal_detail" />
-    </android.support.constraint.ConstraintLayout>
+
+    </RelativeLayout>
 
