--- a/WhereToPlay/app/src/main/res/layout/item_recharge_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_recharge_detail.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_15"
-            android:text='@{detail.balance_type.equals("1")?@string/recharge_way_ali:@string/recharge_way_weixin}'
+            android:text='@{detail.balance_type}'
             android:textColor="#333333"
             android:textSize="@dimen/normal_textsize"/>
 
