--- a/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/packagedetailsfragment.xml
@@ -446,6 +446,16 @@
                 android:layout_height="1dp"
                 android:background="#ffe5e5e5" />
 
+
+            <ImageView
+                android:layout_marginTop="20dp"
+                android:id="@+id/iv_qrcode"
+                android:layout_width="120dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="40dp"
+                android:layout_height="120dp"
+                 />
+
         </LinearLayout>
     </ScrollView>
 
