--- a/WhereToPlay/app/src/main/res/layout/fragment_reserve2.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_reserve2.xml
@@ -36,7 +36,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:padding="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:src="@drawable/qr_scan"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
