--- a/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="doClick"
-            type="com.fanc.wheretoplay.fragment.SignInFragment"/>
+            type="com.fanc.wheretoplay.fragment.SignInFragment" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -14,6 +15,18 @@
         android:layout_height="match_parent"
         android:background="@color/bg_gray"
         android:paddingTop="@dimen/statubar_height">
+
+
+        <ImageView
+            android:id="@+id/ivclose"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:src="@drawable/close"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+
+
+            />
 
         <ImageView
             android:id="@+id/iv_signin"
@@ -24,7 +37,7 @@
             android:src="@drawable/sign_in_top"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
@@ -46,7 +59,7 @@
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/mobile"
                 android:textColor="@color/text_black"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textSize="@dimen/normal_textsize" />
 
             <EditText
                 android:id="@+id/et_signin_mobile"
@@ -58,7 +71,7 @@
                 android:inputType="phone"
                 android:textColor="@color/text_black"
                 android:textColorHint="@color/text_hint"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textSize="@dimen/normal_textsize" />
 
             <TextView
                 android:id="@+id/tv_signin_password"
@@ -69,7 +82,7 @@
                 android:paddingLeft="@dimen/margin_15"
                 android:text="@string/password"
                 android:textColor="@color/shape_reserve_top_bg"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textSize="@dimen/normal_textsize" />
 
             <EditText
                 android:id="@+id/et_signin_password"
@@ -82,13 +95,13 @@
                 android:inputType="textPassword"
                 android:textColor="@color/shape_reserve_top_bg"
                 android:textColorHint="@color/text_hint"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textSize="@dimen/normal_textsize" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/line_height_1px"
                 android:layout_below="@+id/tv_signin_mobile"
-                android:background="@color/pay_reserve_list_divider_white"/>
+                android:background="@color/pay_reserve_list_divider_white" />
 
         </RelativeLayout>
 
@@ -103,7 +116,7 @@
             android:textColor="@color/shape_reserve_top_bg"
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
         <TextView
             android:id="@+id/tv_signin_register"
@@ -115,7 +128,7 @@
             android:textColor="@color/shape_reserve_top_bg"
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_signin_forget_pwd"/>
+            app:layout_constraintTop_toTopOf="@+id/tv_signin_forget_pwd" />
 
         <Button
             android:id="@+id/btn_signin"
@@ -131,7 +144,7 @@
             app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/relativeLayout"
-            app:layout_constraintTop_toBottomOf="@+id/tv_signin_forget_pwd"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_signin_forget_pwd" />
 
 
     </android.support.constraint.ConstraintLayout>
